   * parser.y : Retrofit fixes - exclude level 77 from "Item requires a data name" check

2012-05-09  human

	* cobc.c : Added conversion for enabling options in WIN style

2010-06-22  Franklin Ankum

	* cobc.h, config.c, config.def, parser.y, tree.c : Implement
	  default-organization: record-sequential (default=old behaviour),
	  line-sequential

2009-02-06  Roger While <simrw@sim-basis.de>

	* pplex.l : Check all of "Area A" after AUTHOR etc.

2009-02-02  Roger While <simrw@sim-basis.de>

	* scanner.l : Fix parsing of # lines

2009-01-30  Roger While <simrw@sim-basis.de>

	* warning.def, parser.y, scanner.l, tree.h : Unreachable statement warn
	* cobc.c : Fix program name

2009-01-29  Roger While <simrw@sim-basis.de>

	* parser.y, scanner.l, tree.h : Force LITERAL for PROGRAM-ID

2009-01-28  Roger While <simrw@sim-basis.de>

	* parser.y : Fix warning on non-USING LINKAGE item redefines
	* codegen.c : Remove refs to call.def
	* cobc.c, codegen.c, typeck.c : Remove -dynopt usage
	* Makefile.am : Remove call.def

2009-01-27  Roger While <simrw@sim-basis.de>

	* parser.y : Fix PROGRAM-ID types
	* typeck.c : Change hyphen interpretation
	* codegen.c : Optimize CALL literal

2009-01-24  Roger While <simrw@sim-basis.de>

	* cobc.c, codegen.c : Fix up labels

2009-01-24  Roger While <simrw@sim-basis.de>

	* cobc.c : Fix signals for MinGW

2009-01-23  Roger While <simrw@sim-basis.de>

	* tree.c, typeck.c : RETURN-CODE is GLOBAL in nested programs
	* reserved.c : Allow not-reserved from config on functions

2009-01-22  Roger While <simrw@sim-basis.de>

	* typeck.c, tree.[ch], codegen.c : Change warning for special registers
	* parser.y : Divorce constant fields from the working list
	* typeck.c : Fix ACCEPT/DISPLAY AT llcc for screen items
	* reserved.c, tree.[ch], scanner.l, parser.y : Functions CONCATENATE
		and SUBSTITUTE-CASE

2009-01-20  Roger While <simrw@sim-basis.de>

	* scanner.l : Allow empty alphanumeric literal